--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@
   color: rgba(252, 251, 233, 0.85);
   font-family: 'chenwixun-jian2c96aacf5724035', cursive;
   font-weight: 100;
-  margin: 0 0 0.8em 0;
+  margin: 1em 0 0 0;
   font-size:2.5em;
 }
 .text-container h2.happy {
